Update main.scss for the 800*1280 working of the submenu

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -880,7 +880,7 @@ h1 .label {
 }
 
 
-@media (max-width: $screen-sm-max) {
+@media (max-width: $screen-md-max) {
     .dashboard-item {
         min-height: 44px;
         
