--- a/src/pretix/eventyay_common/templates/eventyay_common/event/settings.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/event/settings.html
@@ -131,9 +131,10 @@
             </fieldset>
             <fieldset>
                 <legend>{{ _('Design') }}</legend>
+                {% bootstrap_field sform.event_logo_image layout="control" %}
+                {% bootstrap_field sform.logo_show_title layout="control" %}
                 {% bootstrap_field sform.logo_image layout="control" %}
                 {% bootstrap_field sform.logo_image_large layout="control" %}
-                {% bootstrap_field sform.logo_show_title layout="control" %}
                 {% bootstrap_field sform.og_image layout="control" %}
                 {% url "control:organizer.edit" organizer=request.organizer.slug as org_url %}
                 {% propagated request.event org_url "primary_color" "primary_font" "theme_color_success" "theme_color_danger" %}
