fix: add team field to QueuedMail model and show team on outbox

--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/outbox_list.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/outbox_list.html
@@ -41,6 +41,7 @@
             <th>{% translate "Subject" %}</th>
             <th>{% translate "To" %}</th>
             <th>{% translate "Order" %}</th>
+            <th>{% translate "Team" %}</th>
             <th>{% translate "Actions" %}</th>
         </tr>
     </thead>
@@ -60,7 +61,16 @@
                         {{ mail.order.code }}
                     </a>
                 {% else %}
-                    <em>{% translate "N/A" %}</em>
+                    <em>{% translate "" %}</em>
+                {% endif %}
+            </td>
+            <td>
+                {% if mail.team %}
+                    <a href="{% url 'control:organizer.team' organizer=request.event.organizer.slug team=mail.team.id %}" target="_blank">
+                        {{ mail.team.name }}
+                    </a>
+                {% else %}
+                    <em>{% translate "" %}</em>
                 {% endif %}
             </td>
             <td>
