--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/outbox_list.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/outbox_list.html
@@ -17,21 +17,41 @@
     </div>
 </nav>
 
-<div class="btn-toolbar" role="toolbar">
-    <!-- Send All -->
-    <div class="btn-group" role="group">
-        <form method="post" action="{% url 'plugins:sendmail:send_all' organizer=request.event.organizer.slug event=request.event.slug %}" style="display:inline;">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-primary btn-lg">{% translate "Send all" %}</button>
-        </form>
-    </div>
+<div class="submit-group">
+    <div class="row">
+        <div class="col-md-12">
+            <form method="get" class="form-inline pull-left">
+                <div class="form-group">
+                    <input type="text" name="q" class="form-control"
+                           placeholder="{% translate 'Search' %}" value="{{ query }}">
+                </div>
+                {% if current_ordering %}
+                    <input type="hidden" name="ordering" value="{{ current_ordering }}">
+                {% endif %}
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">
+                        {% translate "Search" %}
+                    </button>
+                </div>
+            </form>
 
-    <!-- Discard All -->
-    <div class="btn-group" role="group">
-        <a href="{% url 'plugins:sendmail:purge_all' organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-danger btn-lg">
-            {% translate "Discard all" %}
-        </a>
+            <div class="btn-toolbar pull-right" role="toolbar">
+                <div class="btn-group" role="group">
+                    <form method="post" action="{% url 'plugins:sendmail:send_all' organizer=request.event.organizer.slug event=request.event.slug %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary btn-save">{% translate "Send all" %}</button>
+                    </form>
+                </div>
+                <div class="btn-group" role="group">
+                    <a href="{% url 'plugins:sendmail:purge_all' organizer=request.event.organizer.slug event=request.event.slug %}"
+                       class="btn btn-cancel">
+                        {% translate "Discard all" %}
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="clearfix"></div>
 </div>
 
 <table class="table mt-4">
@@ -41,11 +61,11 @@
                 <th>
                     {{ label }}
                     {% with asc=field desc="-"|add:field %}
-                        <a href="?ordering={{ asc }}"
+                        <a href="?ordering={{ asc }}{% if query %}&q={{ query }}{% endif %}"
                         class="{% if current_ordering == asc %}fw-bold{% else %}text-muted{% endif %}">
                             &#9650;
                         </a>
-                        <a href="?ordering={{ desc }}"
+                        <a href="?ordering={{ desc }}{% if query %}&q={{ query }}{% endif %}"
                         class="{% if current_ordering == desc %}fw-bold{% else %}text-muted{% endif %}">
                             &#9660;
                         </a>
@@ -87,7 +107,7 @@
                 <div class="btn-toolbar" role="toolbar">
                     <!-- Send -->
                     <div class="btn-group" role="group">
-                        <form method="post" action="{% url 'plugins:sendmail:send_single' organizer=request.event.organizer.slug event=request.event.slug pk=mail.pk %}" style="display:inline;">
+                        <form method="post" action="{% url 'plugins:sendmail:send_single' organizer=request.event.organizer.slug event=request.event.slug pk=mail.pk %}">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-sm btn-primary" title="{% translate 'Send this email' %}">
                                 <i class="fa fa-mail-forward"></i>
