--- a/src/pretix/eventyay_common/templates/eventyay_common/event/settings.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/event/settings.html
@@ -41,15 +41,22 @@
     <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
         {% csrf_token %}
         {% bootstrap_form_errors form %}
+        {% bootstrap_form_errors sform %} {# Added to show sform errors #}
         <div class="tabbed-form">
             <fieldset>
                 <legend>{% trans "Basics" %}</legend>
                 {% bootstrap_field form.name layout="control" %}
                 {% bootstrap_field form.slug layout="control" %}
+                {% if form.domain %} {# Conditionally show if domain field is added to form #}
+                    {% bootstrap_field form.domain layout="control" %}
+                {% endif %}
                 {% bootstrap_field form.date_from layout="control" %}
                 {% bootstrap_field form.date_to layout="control" %}
-                {% bootstrap_field form.currency layout="control" %}
-                {% bootstrap_field form.sales_channels layout="control" %}
+                {% bootstrap_field form.date_admission layout="control" %}
+                {% include "pretixcontrol/event/fragment_geodata.html" %}
+                {% bootstrap_field sform.contact_mail layout="control" %}
+                {% bootstrap_field sform.imprint_url layout="control" %}
+                {% bootstrap_field form.is_public layout="control" %} 
                 <div class="setting-part">
                     <div class="form-group setting-form">
                         <label class="col-md-3 control-label">{% trans "Tickets system" %}</label>
@@ -124,6 +131,7 @@
                 {% bootstrap_field sform.locales layout="control" %}
                 {% bootstrap_field sform.locale layout="control" %}
                 {% bootstrap_field sform.timezone layout="control" %}
+                {% bootstrap_field sform.region layout="control" %}
             </fieldset>
             <fieldset>
                 <legend>{{ _('Texts') }}</legend>
