feat: Implement an Outbox for Emails - Multiple receivers

--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
@@ -63,7 +63,7 @@
                 {% trans "Preview email" %}
                 </button>
                 <button type="submit" class="btn btn-primary btn-save">
-                    {% trans "Send" %}
+                    {% trans "Send to outbox" %}
                 </button>
             </div>
         </form>
