fix: sorting in outbox and  add show total recipients in outbox

--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/outbox_list.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/outbox_list.html
@@ -67,6 +67,7 @@
                     {% endwith %}
                 </th>
             {% endfor %}
+            <th>{% translate "Total recipients" %}</th>
             <th>{% translate "Actions" %}</th>
         </tr>
     </thead>
@@ -90,6 +91,7 @@
                     {% endif %}
                 {% endwith %}
             </td>
+            <td>{{ mail.to_users|length }}</td>
             <td>
                 <div class="btn-toolbar" role="toolbar">
                     <!-- Send -->
