improved on Quan suggestions

--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/outbox_list.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/outbox_list.html
@@ -78,7 +78,7 @@
             <td>
                 <a class="text-body text-decoration-none"
                    href="{% url 'plugins:sendmail:edit_mail' organizer=request.event.organizer.slug event=request.event.slug pk=mail.pk %}">
-                    {{ mail.subject_en }}
+                    {{ mail.raw_subject }}
                 </a>
             </td>
             <td>
