--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
@@ -59,7 +59,7 @@
             </fieldset>
             {% endif %}
             <div class="form-group submit-group">
-                <button type="submit" class="btn btn-default btn-save pull-left" name="action" value="preview">
+                <button type="submit" class="btn btn-default btn-save" name="action" value="preview">
                 {% trans "Preview email" %}
                 </button>
                 <button type="submit" class="btn btn-primary btn-save">
